--- a/app/src/main/res/menu/menufordh.xml
+++ b/app/src/main/res/menu/menufordh.xml
@@ -19,6 +19,9 @@
         android:title="Assign Representative"
         />
 
-
+    <item
+        android:id="@+id/LogOut"
+        android:title="Log Out"
+        />
 
 </menu>
