--- a/app/src/main/res/menu/menuforclerk.xml
+++ b/app/src/main/res/menu/menuforclerk.xml
@@ -4,5 +4,6 @@
     <item android:title="Confirm stock discrepancy" app:showAsAction="always" android:orderInCategory="101" android:id="@+id/item1"/>
     <item android:title="Confirm order" app:showAsAction="always" android:orderInCategory="101" android:id="@+id/item2"/>
     <item android:title="Process request" app:showAsAction="always" android:orderInCategory="101" android:id="@+id/item3"/>
+    <item android:id="@+id/LogOut"  android:title="Log Out" android:orderInCategory="101" />
 
 </menu>
